feat: H2 연동 및 JPA 구현